--- a/index.html
+++ b/index.html
@@ -49,6 +49,17 @@
       <br>
     </div>
     <div class="item">
+      <img src="./imagenes/leopardo.jpg">
+      <h2>El leopardo</h2>
+      <p>
+        El leopardo (Panthera pardus) es un mamífero carnívoro de familia de los félidos. Al igual que tres de los demás
+        félidos del género Panthera: el león, el tigre y el jaguar, están caracterizados por una modificación en el
+        hueso hioides que les permite rugir. También se lo conoce como pantera parda y, cuando presenta un pelaje
+        completamente oscuro como pantera negra (melánico).
+      </p>
+      <br>
+    </div>
+    <div class="item">
       <img src="./imagenes/pantera-negra.jpg">
       <h2>La pantera negra</h2>
       <p>
